--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,6 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
+# This will import the files from the _sass folder
 ---
 
 @import "variables";
